switch out of developer mode to check out the following: - upgrade to mariadb:10 - use php's opcache

--- a/docker-images/installer/magerun/n98-magerun.yaml.tmpl
+++ b/docker-images/installer/magerun/n98-magerun.yaml.tmpl
@@ -3,10 +3,10 @@ commands:
     installation:
 
         defaults:
-          currency: EUR
-          locale: en_GB
-          timezone: Europe/London
-          use_secure: no
+          currency: USD
+          locale: en_US
+          timezone: Pacific/Los Angeles
+          use_secure: yes
           use_rewrites: yes
           session_save: files
           admin_username: ${ADMIN_USERNAME}
