--- a/docker-images/installer/magerun/n98-magerun.yaml.tmpl
+++ b/docker-images/installer/magerun/n98-magerun.yaml.tmpl
@@ -4,7 +4,7 @@ commands:
         defaults:
           currency: USD
           locale: en_US
-          timezone: Pacific/Los Angeles
+          timezone: UTC
           use_secure: yes
           use_rewrites: yes
           session_save: files
